--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "@hookform/resolvers": "^5.0.1",
     "framer-motion": "^12.11.4",
+    "lenis": "^1.3.3",
     "lucide-react": "^0.510.0",
     "next": "15.3.2",
     "next-intl": "^4.1.0",
