--- a/package.json
+++ b/package.json
@@ -9,8 +9,11 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@googlemaps/js-api-loader": "^1.16.8",
     "@hookform/resolvers": "^5.0.1",
+    "@types/leaflet": "^1.9.17",
     "framer-motion": "^12.11.4",
+    "leaflet": "^1.9.4",
     "lenis": "^1.3.3",
     "lucide-react": "^0.510.0",
     "next": "15.3.2",
@@ -18,6 +21,7 @@
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "react-hook-form": "^7.56.3",
+    "react-leaflet": "^5.0.0",
     "resend": "^4.5.1",
     "zod": "^3.24.4"
   },
