--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "react-hook-form": "^7.56.3",
     "react-leaflet": "^5.0.0",
     "resend": "^4.5.1",
+    "swiper": "^11.2.7",
     "zod": "^3.24.4"
   },
   "devDependencies": {
