update landing page

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -29,8 +29,15 @@
       "@lib/*": ["src/lib/*"],
       "@types/*": ["src/lib/types/*"],
       "@styles/*": ["src/styles/*"]
-    }
+    },
+    "typeRoots": ["./node_modules/@types", "./src/types"]
   },
-  "include": ["next-env.d.ts", "**/*.ts", "**/*.tsx", ".next/types/**/*.ts"],
+  "include": [
+    "next-env.d.ts",
+    "**/*.ts",
+    "**/*.tsx",
+    ".next/types/**/*.ts",
+    "src/types/**/*.d.ts"
+  ],
   "exclude": ["node_modules"]
 }
