--- a/package.json
+++ b/package.json
@@ -10,12 +10,14 @@
   },
   "dependencies": {
     "@hookform/resolvers": "^5.0.1",
+    "date-fns": "^4.1.0",
     "framer-motion": "^12.11.4",
     "lenis": "^1.3.3",
     "lucide-react": "^0.511.0",
     "next": "15.3.2",
     "next-intl": "^4.1.0",
     "react": "^19.0.0",
+    "react-day-picker": "^9.7.0",
     "react-dom": "^19.0.0",
     "react-hook-form": "^7.56.3",
     "resend": "^4.5.1",
